<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lime</string>

    <!-- Intro page -->
    <string name="button_local">Local</string>

    <!-- Actions -->
    <string name="action_search">Search</string>
    <string name="action_new">New</string>

    <!-- Navigation drawer -->
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Add Contact</item>
        <item>Settings</item>
        <item>About</item>
    </string-array>
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">

        <!-- TODO: get a drawable specific to home -->
        <item>@drawable/ic_profile</item>
        <!-- TODO: get a drawable specific to contact -->
        <item>@drawable/ic_action_add_person</item>
        <item>@drawable/ic_settings</item>
        <item>@drawable/ic_action_about</item>
    </array>
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Add Contact -->
    <string name="add_contact_title">Choose one of the following methods to add a contact</string>
    <string name="add_contact_email_hint">hello.world@foo.com</string>
    <string name="add_contact_email_desc">Email address</string>
    <string name="add_contact_pin_hint">12345</string>
    <string name="add_contact_pin_desc">PIN</string>
    <string name="add_contact_phone_hint">416-111-1111</string>
    <string name="add_contact_phone_desc">Phone Number</string>
    <string name="add_contact_button_ok">Add</string>
    <string name="add_contact_button_cancel">Cancel</string>

    <!-- Settings -->
    <!-- Notifications -->
    <string name="pref_notifications_title_main">Notifications</string>
    <string name="pref_notifications_new_msg">New messages</string>
    <string name="pref_notifications_ringtone">Ringtone</string>
    <string name="pref_notifications_vibrate">Vibrate</string>
    <string name="pref_notifications_new_msg_key">new messages key</string>
    <string name="pref_notifications_ringtone_key">ringtone key</string>
    <string name="pref_notifications_vibrate_key">vibrate key</string>

    <!-- About -->
    <string name="team_220">We are team 220!</string>
    <string name="about_desc">Team member</string>
    <string-array name="about_tag">
        <item>We are team 220!</item>
        <item>Member 1</item>
        <item>Member 2</item>
        <item>Member 3</item>
        <item>Member 4</item>
    </string-array>

    <!-- Profile -->
    <string name="profile_name">Name:</string>
    <string name="profile_email">Email:</string>
    <string name="profile_status">Status:</string>
    <string name="profile_sender_id">Sender ID:</string>
    <string name="profile_img_desc">Change picture</string>

    <!-- Chat -->
    <string name="chat_img">Contact image</string>
    <!-- Colors for image view of chat/contacts -->
    <string-array name="chat_img_view">
        <item>#d50000</item>
        <item>#c51162</item>
        <item>#aa00ff</item>
        <item>#6200ea</item>
        <item>#304ffe</item>
        <item>#2962ff</item>
        <item>#0091ea</item>
        <item>#00b8d4</item>
        <item>#00bfa5</item>
        <item>#00c853</item>
        <item>#64dd17</item>
        <item>#aeea00</item>
        <item>#ffd600</item>
        <item>#ffab00</item>
        <item>#ff6d00</item>
        <item>#dd2c00</item>
        <item>#3e2723</item>
        <item>#212121</item>
        <item>#01579b</item>
        <item>#311b92</item>
        <item>#f50057</item>
        <item>#2196f3</item>
        <item>#00bcd4</item>
        <item>#c6ff00</item>
        <item>#ff3d00</item>
        <item>#607d8b</item>
    </string-array>

    <!-- Empty view speech bubble -->
    <string name="empty_view_no_chats">You have no recent conversations.</string>
    
    <!-- Empty view contacts list -->
    <string name="empty_view_no_contacts">You have no contacts.</string>

    <!-- Contact actions -->
    <string name="contact_actions_view">View contact</string>
    <string name="contact_actions_block">Block contact</string>
    <string name="contact_actions_unblock">Unblock contact</string>
    <string name="contact_action_delete">Delete contact</string>

    <!-- Contact view -->
    <string name="contact_status_blocked">Blocked</string>
</resources>
